--- a/db_benchmark/docker-compose/docker-compose.yaml
+++ b/db_benchmark/docker-compose/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       TZ: Asia/Shanghai
     restart: always  # 容器异常退出时自动重启（可选）
   mysql:
-    image: mysql:8.0
+    image: mysql
     container_name: mysql
     restart: always
     ports:
